# holo-epub-reader

./: .gitignore  README.md  SKILL.md  deploy_skill.sh  pyproject.toml
scripts/: cli.py  html_extract.py  parse.sh  validate.sh
skills/epub-reader-skill/: SKILL.md
skills/epub-reader-skill/references/: cli.md  output-schema.md  validation.md
src/epub_reader/: epub.py  models.py  reader.py
tests/: test_reader.py
