[project]
name = "epub-reader"
version = "0.1.0"
description = "EPUB reader that extracts text and images into LLM-friendly blocks."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Codex" }]
license = { text = "MIT" }
dependencies = []

[project.scripts]
epub-reader = "epub_reader.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["epub_reader*"]
